fix: update `login` route to use null, instead of undefined, for empty body
